# docs/swagger.yaml
@@ -10,6 +10,19 @@ definitions:
     - currency
     - owner
     type: object
+  api.ListAccountRequest:
+    properties:
+      page_id:
+        minimum: 1
+        type: integer
+      page_size:
+        maximum: 10
+        minimum: 5
+        type: integer
+    required:
+    - page_id
+    - page_size
+    type: object
   util.ErrorResponse:
     properties:
       error:
@@ -98,6 +111,32 @@ paths:
           schema:
             $ref: '#/definitions/util.ErrorResponse'
       summary: Gets User Account
+      tags:
+      - v1/Account
+  /v1/accounts:
+    post:
+      consumes:
+      - application/json
+      description: takes pages and pagesize
+      parameters:
+      - description: ListAccountRequest
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/api.ListAccountRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/util.OkResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
+      summary: Gets List Of User Account
       tags:
       - v1/Account
 swagger: "2.0"
